# birdclef-motif-viewer

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  docker-compose-cloudrun.yml  docker-compose.yml
api/: README.md  pyproject.toml
api/api/: app.py  config.py  spectrogram.py
api/tests/: test_spectrogram.py
app/: package-lock.json  package.json  svelte.config.js
app/src/lib/: MelSpectrogram.svelte  Navbar.svelte  Version.svelte  WaveSurfer.svelte  interfaces.ts
app/src/routes/: __layout.svelte  index.svelte  status.js  summary.svelte
app/src/routes/proxy/: [...prefix].js
app/src/routes/summary/: [slug].svelte
app/src/routes/summary/[species]/: [slug].svelte
client/: package-lock.json  package.json
client/src/lib/: Version.svelte
client/src/routes/: __layout.svelte  index.svelte
client/src/routes/summary/: [slug].svelte
client/src/routes/summary/[species]/: [slug].svelte
docker/: Dockerfile.api  Dockerfile.app  Dockerfile.client  Dockerfile.cloudrun  Dockerfile.server  entrypoint.sh
nginx/: birdclef-2022-listing.json  nginx-cloudrun.conf  nginx.conf
scripts/: generate-listing.py
server/: README.md  pyproject.toml
server/server/: app.py  config.py
terraform/: main.tf  service-account.tf
